--- a/src/components/ui/cards/ProfileCard.astro
+++ b/src/components/ui/cards/ProfileCard.astro
@@ -1,8 +1,9 @@
 ---
 import CodeViewer from '../../util/CodeViewer.astro';
+import '../../../styles/card-base.css';
 
 const code = `
-<div class="card-profile">
+<div class="card-base card-profile">
   <div class="profile-header"></div>
   <img class="profile-avatar" src="https://randomuser.me/api/portraits/women/68.jpg" alt="Avatar de usuario">
   <div class="profile-body">
@@ -79,7 +80,7 @@ const code = `
 ---
 
 <div class="component-preview">
-  <div class="card-profile">
+  <div class="card-base card-profile">
     <div class="profile-header"></div>
     <img class="profile-avatar" src="https://randomuser.me/api/portraits/women/68.jpg" alt="Avatar de usuario">
     <div class="profile-body">
